src/z80asm/z80asm2/t/20-preproc/expected/defl_21.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/20-preproc//input/defl_21.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/20-preproc/input/defl_21.asm...
t/20-preproc/input/defl_21.asm:1:5: error: Expected identifier after DEFL
    defl ; no name
        ^
t/20-preproc/input/defl_21.asm:2:7: error: DEFL macro cannot be function-like
    defl X(p1) ; cannot be function macro
          ^
t/20-preproc/input/defl_21.asm:4:1: error: DEFL cannot redefine function-like macro: Y
    Y defl ; cannot redefine function macro
    ^
t/20-preproc/input/defl_21.asm:3:8: note: Previous definition
    define Y(p1)
           ^
# file: t/20-preproc/input/defl_21.asm
EndOfLine	"\n"	5:1	
# file: t/20-preproc/input/defl_21.asm
Identifier	"DEFINE"	3:8	keyword=DEFINE 
Identifier	"Y"	3:8	
LeftParen	"("	3:8	
Identifier	"p1"	3:8	
RightParen	")"	3:8	
EQ	"="	3:8	
Integer	"1"	3:13	int_value=1 
symbol	__CPU_Z80__	1	(defined at )
symbol	__CPU_ZILOG__	1	(defined at )
